# schip8

./: .gitignore  CMakeLists.txt  README.md  s_chip8.c  s_chip8.h  s_main.c
include/: s_app.h  s_chip8.h  s_window.h
src/: s_app.c  s_chip8.c  s_main.c  s_window.c
